chore: restore documented discovery-safe python_lsp_server; validate discovery smoke test

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # --- MCP Code Intelligence Specific ---
 .mcp-code-intelligence/
 .mcp-vector-search/
+.mcp/
 .antigravity/
+.mcp-vector-search/
+mcp-vector-search/
 .agent/
 .roo/
 .cursor/
