--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "uvicorn>=0.24.0",
     "py-mcp-installer>=0.1.4",
     "orjson>=3.9.0",
+    "einops",
+    "torch>=2.0.0",
 ]
 
 [dependency-groups]
